Actualizo version en ingles

--- a/en.html
+++ b/en.html
@@ -7,6 +7,7 @@
     <title>Ignacio Heredia</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" integrity="sha256-HxaKz5E/eBbvhGMNwhWRPrAR9i/lG1JeT4mD6hCQ7s4=" crossorigin="anonymous" />
 
     <link href="style.css" rel="stylesheet">
@@ -23,217 +24,226 @@
     </script>
   </head>
   <body class="desktop">
-    <div class="container">
-      <div class="box-shadow">
-        <div class="main">
-          <img src="https://avatars0.githubusercontent.com/u/4714590?v=4&s=460">
-          <h1>Ignacio Heredia</h1>
-          <p class="role">Web developer</p>
-          <p class="location">Buenos Aires, Argentina</p>
-        </div><hr>
-        <div class="section profile">
-          <h2>PROFILE</h2>
-          <p class="section-item-description">
-            I'm a fullstack web developer searching for interesting projects.
-            Used to study Mathematical Sciences at the University of
-            Buenos Aires.
-            I'm an open source fundamentalist, curious, music lover, and
-            I'm currently working at the Data team in the Undersecretary of
-            Public Innovation and Open Goverment of Argentina.
-          </p>
-        </div><hr>
-        <div class="section info">
-          <h2>PERSONAL INFORMATION</h2>
-          <p>
-            Mobile: +54 911-5828-7960
-          </p>
-          <p>
-            Email: <a href="mailto:ignacio.nh@gmail.com" target="_blank">ignacio.nh@gmail.com</a>
-          </p>
-          <p>
-            Birth date: December 11, 1990
-          </p>
-        </div><hr>
-        <div class="section work-exp">
-          <h2>WORK EXPERIENCE</h2>
+    <article class="container">
+      <section class="main">
+        <img src="https://avatars0.githubusercontent.com/u/4714590?v=4&s=460">
+        <h1>Ignacio Heredia</h1>
+        <p>Web developer</p>
+        <p>Buenos Aires, Argentina</p>
+      </section>
+      <section class="profile">
+        <h2>PROFILE</h2>
+        <p>
+          I'm a fullstack web developer searching for interesting projects.
+          Used to study Mathematical Sciences at the University of
+          Buenos Aires.
+          I'm an open source fundamentalist, curious, music lover, and
+          I'm currently working at the Data team in the Undersecretary of
+          Public Innovation and Open Goverment of Argentina.
+        </p>
+      </section>
+      <section class="info">
+        <h2>PERSONAL INFORMATION</h2>
+        <p>
+          Mobile: +54 911-5828-7960
+        </p>
+        <p>
+          Email: <a href="mailto:ignacio.nh@gmail.com" target="_blank">ignacio.nh@gmail.com</a>
+        </p>
+        <p>
+          Birth date: December 11, 1990
+        </p>
+      </section>
+      <section class="work-exp">
+        <h2>WORK EXPERIENCE</h2>
 
-          <h3 class="section-item-title">
-            Undersecretary of Public Innovation and Open Government,
-            Ministry of Modernization
-          </h3>
-          <p class="section-item-subtitle">Full stack developer</p>
-          <p class="section-item-description">
-            Implementation of the
-            <a href="http://datos.gob.ar/" target="_blank">
-              open data portal of Argentina
-            </a>
-            , the
-            <a href="https://audiencias.mininterior.gob.ar/" target="_blank">
-              national public audiences registry system
-            </a>
-            and the
-            <a href="https://github.com/datosgobar/portal-andino" target="_blank">
-              Andino open data portal
-            </a>
-            , among others.
-          </p>
-          <p class="section-item-ref">Since January 2016</p>
+        <ol>
+          <li>
+            <h3>
+              Undersecretary of Public Innovation and Open Government,
+              Ministry of Modernization
+            </h3>
+            <p>Full stack developer</p>
+            <p>
+              Implementation of the
+              <a href="http://datos.gob.ar/" target="_blank">
+                open data portal of Argentina
+              </a>
+              , the
+              <a href="https://audiencias.mininterior.gob.ar/" target="_blank">
+                national public audiences registry system
+              </a>
+              and the
+              <a href="https://github.com/datosgobar/portal-andino" target="_blank">
+                Andino open data portal
+              </a>
+              , among others.
+            </p>
+            <p class="item-ref">Since January 2016</p>
+          </li>
 
-          <hr class="section-hr">
+          <li>
+            <h3>
+              Ministry of Modernization, Buenos Aires City Government
+            </h3>
+            <p>Full stack developer</p>
+            <p>
+              Implementation of APIs, service integration for the city
+              infrastructure and monitorization of city iot sensors.
+            </p>
+            <p class="item-ref">From May 2015 to December 2015</p>
+          </li>
 
-          <h3 class="section-item-title">
-            Ministry of Modernization, Buenos Aires City Government
-          </h3>
-          <p class="section-item-subtitle">Full stack developer</p>
-          <p class="section-item-description">
-            Implementation of APIs, service integration for the city
-            infrastructure and monitorization of city iot sensors.
-          </p>
-          <p class="section-item-ref">From May 2015 to December 2015</p>
+          <li>
+            <h3>
+              Aristas SRL
+            </h3>
+            <p>Full stack developer</p>
+            <p>
+              Product design and web app development. Implementation of recommendation
+              algorithms and architecture planiffication.
+            </p>
+            <p class="item-ref">From April 2015 to February 2016</p>
+          </li>
 
-          <hr class="section-hr">
+          <li>
+            <h3>
+              Devartis
+            </h3>
+            <p>Full stack developer</p>
+            <p>
+              Development and maintenance of web apps, search engines integrations
+              and data reporting tools.
+            </p>
+            <p class="item-ref">From August 2013 to May 2015</p>
+          </li>
 
-          <h3 class="section-item-title">
-            Aristas SRL
-          </h3>
-          <p class="section-item-subtitle">Full stack developer</p>
-          <p class="section-item-description">
-            Product design and web app development. Implementation of recommendation
-            algorithms and architecture planiffication.
-          </p>
-          <p class="section-item-ref">From April 2015 to February 2016</p>
+          <li>
+            <h3>
+              CBC, University of Buenos Aires
+            </h3>
+            <p>Teacher</p>
+            <p>
+              Teacher at the introductory mathematics class
+            </p>
+            <p class="item-ref">2014</p>
+          </li>
+        </ol>
 
-          <hr class="section-hr">
+      </section>
+      <section class="education">
+        <h2>ACADEMIC FORMATION</h2>
 
-          <h3 class="section-item-title">
-            Devartis
-          </h3>
-          <p class="section-item-subtitle">Full stack developer</p>
-          <p class="section-item-description">
-            Development and maintenance of web apps, search engines integrations
-            and data reporting tools.
-          </p>
-          <p class="section-item-ref">From August 2013 to May 2015</p>
+        <h3>
+          University of Buenos Aires, School of Exact and Natural Sciences
+        </h3>
+        <p>
+          Deegre in Mathamtical Sciences,
+          Applied Mathematics orientation
+        </p>
+        <p class="item-ref">
+          60% completed
+        </p>
+      </section>
+      <section class="languages">
+        <h2>LANGUAGES</h2>
 
-          <hr class="section-hr">
+        <ol>
+          <li>
+            <h3>
+              Spanish
+            </h3>
+            <p>
+              Native language
+            </p>
+          </li>
+          <li>
+            <h3>
+              English
+            </h3>
+            <p>
+              Advance
+            </p>
+          </li>
+        </ol>
 
-          <h3 class="section-item-title">
-            CBC, University of Buenos Aires
-          </h3>
-          <p class="section-item-subtitle">Teacher</p>
-          <p class="section-item-description">
-            Teacher at the introductory mathematics class
-          </p>
-          <p class="section-item-ref">2014</p>
+      </section>
+      <section class="others">
+        <h2>OTHERS</h2>
 
-        </div><hr>
-        <div class="section education">
-          <h2>ACADEMIC FORMATION</h2>
+        <ol>
+          <li>
+            <p>
+              Participant in the Argentinian Programming Tourney, 2013 edition -
+              12th place - and 2014 edition - 13th place.
+            </p>
+          </li>
 
-          <h3 class="section-item-title">
-            University of Buenos Aires, School of Exact and Natural Sciences
-          </h3>
-          <p class="section-item-subtitle">
-            Deegre in Mathamtical Sciences,
-            Applied Mathematics orientation
-          </p>
-          <p class="section-item-ref">
-            60% completed
-          </p>
-        </div><hr>
-        <div class="section languages">
-          <h2>LANGUAGES</h2>
+          <li>
+            <p>
+              Speaker at the
+              <a href="https://hackshackersbamediaparty2016.sched.com/event/058ddc4a35eb0d5c1e0bfe69de323447" target="_blank">
+                Media Party 2016
+              </a>
+              and the 2016 edition of the
+              <a href="https://www.argentina.gob.ar/foroargentinaabierta" target="_blank">
+                Argentina Abierta forum,
+              </a>
+              about the
+              <a class="quoted-link" href="https://datosgobar.github.io/mejorando-datos-en-origen/#/" target="_blank">
+                “Upgrading data from the origin”
+              </a>
+              process implemented at the national public audiences registry system.
+            </p>
+          </li>
 
-          <h3 class="section-item-title">
-            Spanish
-          </h3>
-          <p class="section-item-subtitle">
-            Nativa language
-          </p>
+          <li>
+            <p>
+              Speaker at the 2016
+              <a href="http://ar.pycon.org/" target="_blank">
+                Python Conf Ar
+              </a>
+              , about
+              <a class="quoted-link" href="https://datosgobar.github.io/presentacion-nlp-congreso-nacion/#/" target="_blank">
+                “NLP the the National Congress”
+              </a>
+              and the workshop
+              <a class="quoted-link" href="https://github.com/datosgobar/taller-analisis-datos-101" target="_blank">
+                “Data analysis 101”
+              </a>
+            </p>
+          </li>
 
-          <hr class="section-hr">
+          <li>
+            <p>
+              Speaker at the third edition of the
+              <a href="https://www.meetup.com/es/processingBuenosAires/" target="_blank">
+                Processing Buenos Aires,
+              </a>
+              meetup, speaking about
+              <a class="quoted-link" href="https://github.com/iheredia/escenas-del-azar" target="_blank">
+                “Random scenes”
+              </a>
+              and different strategies for controlled randomness at programming art.
+            </p>
+          </li>
 
-          <h3 class="section-item-title">
-            English
-          </h3>
-          <p class="section-item-subtitle">
-            Advance
-          </p>
-        </div><hr>
-        <div class="section others">
-          <h2>OTHERS</h2>
-
-          <p class="section-item-description">
-            Participant in the Argentinian Programming Tourney, 2013 edition -
-            12th place - and 2014 edition - 13th place.
-          </p>
-
-          <hr class="section-hr">
-
-          <p class="section-item-description">
-            Speaker at the
-            <a href="https://hackshackersbamediaparty2016.sched.com/event/058ddc4a35eb0d5c1e0bfe69de323447" target="_blank">
-              Media Party 2016
-            </a>
-            and the 2016 edition of the
-            <a href="https://www.argentina.gob.ar/foroargentinaabierta" target="_blank">
-              Argentina Abierta forum,
-            </a>
-            about the
-            <a class="quoted-link" href="https://datosgobar.github.io/mejorando-datos-en-origen/#/" target="_blank">
-              “Upgrading data from the origin”
-            </a>
-            process implemented at the national public audiences registry system.
-          </p>
-
-          <hr class="section-hr">
-
-          <p class="section-item-description">
-            Speaker at the 2016
-            <a href="http://ar.pycon.org/" target="_blank">
-              Python Conf Ar
-            </a>
-            , about
-            <a class="quoted-link" href="https://datosgobar.github.io/presentacion-nlp-congreso-nacion/#/" target="_blank">
-              “NLP the the National Congress”
-            </a>
-            and the workshop
-            <a class="quoted-link" href="https://github.com/datosgobar/taller-analisis-datos-101" target="_blank">
-              “Data analysis 101”
-            </a>
-          </p>
-
-          <hr class="section-hr">
-
-          <p class="section-item-description">
-            Speaker at the third edition of the
-            <a href="https://www.meetup.com/es/processingBuenosAires/" target="_blank">
-              Processing Buenos Aires,
-            </a>
-            meetup, speaking about
-            <a class="quoted-link" href="https://github.com/iheredia/escenas-del-azar" target="_blank">
-              “Random scenes”
-            </a>
-            and different strategies for controlled randomness at programming art.
-          </p>
-
-          <hr class="section-hr">
-
-          <p class="section-item-description">
-            Interesting personal projects
-            <br>
-            <a href="http://iheredia.github.io/trees/" target="_blank">
-              Random pytagoric tree generator
-            </a>
-            <br>
-            <a href="http://iheredia.github.io/snakes/" target="_blank">
-              Alternative version of the snake game
-            </a>
-          </p>
-
-        </div>
-      </div>
-    </div>
+          <li>
+            <p>
+              Interesting personal projects
+              <br>
+              <a href="http://iheredia.github.io/trees/" target="_blank">
+                Random pytagoric tree generator
+              </a>
+              <br>
+              <a href="http://iheredia.github.io/snakes/" target="_blank">
+                Alternative version of the snake game
+              </a>
+            </p>
+          </li>
+        </ol>
+      </section>
+    </article>
     <script>
       window.mobilecheck = function() {
         var check = false;
