--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/print.css" media="print">
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -28,11 +29,11 @@
 <div class="container">
 
   <header class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3">
+    <div class="col-md-3">
       <img class="imagen" src="assets/iheredia.jpeg">
     </div>
 
-    <div class="col-xs-12 col-sm-12 col-md-9">
+    <div class="col-md-9">
       <h1>Ignacio Heredia</h1>
       <h2>Programador web</h2>
       <br>
@@ -40,15 +41,17 @@
       <div class="redes-sociales">
         <a href="mailto:ignacio.nh@gmail.com">
           <i class="fa fa-envelope-o" aria-hidden="true"></i>
+          <span class="print-visible">ignacio.nh@gmail.com</span>
         </a>
 
         <a href="https://github.com/iheredia" target="_blank">
           <i class="fa fa-github-alt" aria-hidden="true"></i>
+          <span class="print-visible">https://github.com/iheredia</span>
         </a>
       </div>
     </div>
 
-    <div class="col-xs-12 col-sm-12 col-md-12">
+    <div class="col-md-12">
       <hr>
     </div>
   </header>
