--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>Sobre mi</h2>
       Programador web, de esos que programan en su tiempo libre.
 
-      Ex estudiante de licenciatura en Ciencias Matemáticas. No completé la carrera.
+      Ex estudiante de licenciatura en Ciencias Matemáticas (no completé la carrera).
 
       Curioso, amante de la música, el cine y los videojuegos.
 
@@ -50,8 +50,8 @@
     <h3>Mercado Libre</h3>
     <p class="role">Programador web</p>
     <p>
-      Parte del equipo de Frontend Core de Mercado Libre, uno de los equipos cross del ecosistema de Mercado Libre. Encargado
-      de desarrollos que impactan a lo largo de la plataforma.
+      Primero parte del equipo de Frontend Core de Mercado Libre, uno de los equipos cross del ecosistema de Mercado Libre,
+      y luego parte de Loyalty (Mercado Puntos), ayudando a crear valor para nuestros usuarios.
     </p>
     <p class="final-paragraph">Octubre 2017 - Actualidad</p>
 
@@ -118,13 +118,33 @@
 
     <h3>Ingles</h3>
     <p>Nivel avanzado</p>
-
-    <h3>Portugués</h3>
-    <p>Nivel básico</p>
   </section>
 
   <section>
     <h2>Actividades relevantes</h2>
+
+    <p class="final-paragraph">
+      Desarrollo en conjunto a
+      <a href="https://acij.org.ar/" target="_blank">
+        ACIJ
+      </a>
+      del
+      <a href="http://monitorpresupuestario.acij.org.ar/" target="_blank">
+        monitor presupuestario
+      </a>.
+      Herramienta usada para el analisis de los presupuestos de entidades estatales.
+    </p>
+
+    <p class="final-paragraph">
+      Colaborador en el desarrollo open source de
+      <a href="https://github.com/datosgcba/obras-abiertas" target="_blank">
+        BA Obras
+      </a>
+      y
+      <a href="https://github.com/datosgcba/ba_compromisos" target="_blank">
+        BA Compromisos
+      </a>
+    </p>
 
     <p class="final-paragraph">
       Desarrollos independientes hechos para notas interactivas en Infobae:
@@ -186,17 +206,6 @@
 
     <p class="final-paragraph">
       Participante en el Torneo Argentino de Programación edición 2013 - puesto 12 del país - y edición 2014 - puesto 13.
-    </p>
-
-    <p class="final-paragraph">
-      Proyectos personales de interés:
-      <a href="http://iheredia.github.io/trees/" target="_blank">
-        Generador de árboles pitagóricos aleatorios.
-      </a>
-      /
-      <a href="http://iheredia.github.io/snakes/" target="_blank">
-        Versión alternativa del juego snake.
-      </a>
     </p>
   </section>
 </main>
