--- a/index_en.html
+++ b/index_en.html
@@ -38,7 +38,8 @@
     <h3>Mercado Libre</h3>
     <p class="role">Web developer</p>
     <p>
-      Part of the Frontend-Core team at Mercado Libre, a platform wide team that develops for the whole MercadoLibre ecosystem.
+      First part of the Frontend-Core team at Mercado Libre, a platform wide team that develops for the whole
+      Mercado Libre ecosystem, and then part of the Loyalty (Mercado Puntos) team.
     </p>
     <p class="final-paragraph">October 2017 - Now</p>
 
@@ -104,13 +105,33 @@
 
     <h3>English</h3>
     <p>Advance level</p>
-
-    <h3>Portuguese</h3>
-    <p>Basic level</p>
   </section>
 
   <section>
     <h2>Other activities</h2>
+
+    <p class="final-paragraph">
+      Development of the
+      <a href="http://monitorpresupuestario.acij.org.ar/" target="_blank">
+        monitor presupuestario
+      </a>
+      with
+      <a href="https://acij.org.ar/" target="_blank">
+        ACIJ
+      </a>.
+      A tool used for the analysis of government entities budgets.
+    </p>
+
+    <p class="final-paragraph">
+      Collaborator in the open source development of
+      <a href="https://github.com/datosgcba/obras-abiertas" target="_blank">
+        BA Obras
+      </a>
+      and
+      <a href="https://github.com/datosgcba/ba_compromisos" target="_blank">
+        BA Compromisos
+      </a>
+    </p>
 
     <p class="final-paragraph">
       Independent developments for interactive articles at Infobae:
