--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <main>
   <header>
-    <img class="media-align-left" src="assets/iheredia.jpeg">
+    <img class="media-align-left" src="assets/iheredia.jpg">
 
     <h1>Ignacio Heredia</h1>
     <p id="role">Programador web</p>
