--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CV - Ignacio Heredia</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="assets/styles.css">
-  <link rel="stylesheet" type="text/css" href="assets/print.css" media="print">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/print.css" media="print">
 </head>
 
 <body>
 
 <main>
   <header>
-    <img class="media-align-left" src="assets/iheredia.jpg">
+    <img class="media-align-left" src="assets/iheredia.jpg" alt="Ignacio Heredia">
 
     <h1>Ignacio Heredia</h1>
-    <p id="role">Programador web</p>
-    <p id="location">Buenos Aires, Argentina</p>
+    <h2>Programador web</h2>
+    <h3>Buenos Aires, Argentina</h3>
 
     <a href="mailto:ignacio.nh@gmail.com">
       ignacio.nh@gmail.com
