Update government period

--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
     </article>
 
     <article>
-      <h3>Dirección Nacional de Datos e Información Pública. Ministerio de Modernización</h3>
-      <h4>Programador web. Enero 2016 a Septiembre 2017</h4>
+      <h3>Gobierno de la ciudad de Buenos Aires y Ministerio de Modernización de la Nación</h3>
+      <h4>Programador web. Mayo 2015 a Septiembre 2017</h4>
       <p>
-        Implementación del
+        Parte del equipo de Gobierno Abierto de la Ciudad de Buenos Aires trabajando en implementación de APIs para
+        integración de servicios de infraestructura de la ciudad y monitoreo de sensores urbanos.
+        <br />
+        Luego de las elecciones de 2015, el equipo mudó de jurisdicción al Ministerio de Modernización de la Nación.
+        En este nuevo contexto, implementación del
         <a href="http://datos.gob.ar/" target="_blank">
           portal de datos abiertos de la nación
         </a>
@@ -59,15 +63,6 @@
           portal de datos abiertos Andino
         </a>
         , entre otros.
-      </p>
-    </article>
-
-    <article>
-      <h3>Laboratorio de Innovación y Gobierno Abierto de la Ciudad de Buenos Aires</h3>
-      <h4>Programador web. Mayo 2015 a Diciembre 2015</h4>
-      <p>
-        Implementación de APIs para integración de servicios de
-        infraestructura de la ciudad y monitoreo de sensores urbanos.
       </p>
     </article>
 
