--- a/index_en.html
+++ b/index_en.html
@@ -43,10 +43,13 @@
     </article>
 
     <article>
-      <h3>National open data team. Ministry of modernization</h3>
-      <h4>Web developer. January 2016 to October 2017</h4>
+      <h3>Buenos Aires City Government and Argentina National Government</h3>
+      <h4>Web developer. May 2015 to October 2017</h4>
       <p>
-        Developed the
+        First part of the Buenos Aires Open Government team, working in APIs implementation, integration of
+        city services and urban sensorization.
+        After the 2015 presidential elections, the team moved to the national government. In this context we
+        developed the
         <a href="http://datos.gob.ar/" target="_blank">
           national open data portal
         </a>
@@ -58,14 +61,6 @@
         <a href="https://github.com/datosgobar/portal-andino" target="_blank">
           national version of the CKAN platform known as "Andino".
         </a>
-      </p>
-    </article>
-
-    <article>
-      <h3>Innovation and Open Government Lab. Buenos Aires City Government</h3>
-      <h4>Web developer. May 2015 to December 2015</h4>
-      <p>
-        APIs implementation and integration for city services and urban sensorization.
       </p>
     </article>
 
