--- a/index.html
+++ b/index.html
@@ -35,16 +35,20 @@
 
     <article>
       <h3>Mercado Libre</h3>
-      <h4>Programador web. Octubre 2017 a la actualidad</h4>
+      <h4>Sr frontend developer. Enero 2020 a la actualidad</h4>
       <p>
-        Primero parte del equipo de Frontend Core de Mercado Libre, uno de los equipos cross del ecosistema de Mercado Libre,
-        y luego parte de Loyalty (Mercado Puntos), ayudando a crear valor para nuestros usuarios.
+        Parte del equipo de logística de Mercado Envios, aportando a la mayor red de envios de la región.
+      </p>
+      <h4>Ssr frontend developer. Octubre 2017 a diciembre 2019</h4>
+      <p>
+        Primero parte del equipo de Frontend Core de Mercado Libre, uno de los equipos cross del ecosistema de Mercado
+        Libre, luego parte del programa de lealtad Mercado Puntos, ayudando a crear valor para nuestros usuarios
       </p>
     </article>
 
     <article>
       <h3>Gobierno de la ciudad de Buenos Aires y Ministerio de Modernización de la Nación</h3>
-      <h4>Programador web. Mayo 2015 a Septiembre 2017</h4>
+      <h4>Fullstack developer. Mayo 2015 a Septiembre 2017</h4>
       <p>
         Parte del equipo de Gobierno Abierto de la Ciudad de Buenos Aires trabajando en implementación de APIs para
         integración de servicios de infraestructura de la ciudad y monitoreo de sensores urbanos.
@@ -68,7 +72,7 @@
 
     <article>
       <h3>Aristas SRL</h3>
-      <h4>Programador web. Abril 2015 a Febrero 2016</h4>
+      <h4>Fullstack developer. Abril 2015 a Febrero 2016</h4>
       <p>
         Diseño de producto y desarrollo de aplicación web. Implementación de
         algoritmos y planificación de arquitectura.
@@ -77,7 +81,7 @@
 
     <article>
       <h3>Devartis</h3>
-      <h4>Programador web. Agosto 2013 a Mayo 2015</h4>
+      <h4>Jr fullstack developer. Agosto 2013 a Mayo 2015</h4>
       <p>
         Desarrollo y mantenimiento de aplicaciones web, motores de búsqueda y
         herramientas de reportes de datos.
