--- a/index_en.html
+++ b/index_en.html
@@ -35,16 +35,21 @@
 
     <article>
       <h3>Mercado Libre</h3>
-      <h4>Web developer. October 2017 to date</h4>
+      <h4>Sr frontend developer. January 2020 to date</h4>
       <p>
-        First part of the Frontend-Core team at Mercado Libre, a platform wide team that develops for the whole
-        Mercado Libre ecosystem, and then part of the Loyalty (Mercado Puntos) team.
+        Part of the logistics team of Mercado Envios, building the biggest shipment network of the region.
+      </p>
+      <h4>Ssr frontend developer. October 2017 to december 2019</h4>
+      <p>
+        First part of the Frontend-Core team at Mercado Libre, a platform wide team that develops for the whole Mercado
+        Libre ecosystem, then part of the loyalty program (Mercado Puntos) team, helping to improve the value
+        proposition for the customers
       </p>
     </article>
 
     <article>
       <h3>Buenos Aires City Government and Argentina National Government</h3>
-      <h4>Web developer. May 2015 to October 2017</h4>
+      <h4>Fullstack developer. May 2015 to October 2017</h4>
       <p>
         First part of the Buenos Aires Open Government team, working in APIs implementation, integration of
         city services and urban sensorization.
@@ -66,7 +71,7 @@
 
     <article>
       <h3>Aristas SRL</h3>
-      <h4>Web developer. April 2015 to February 2016</h4>
+      <h4>Fullstack developer. April 2015 to February 2016</h4>
       <p>
         Web development, algorithm implementation, architecture planning and product design.
       </p>
@@ -74,7 +79,7 @@
 
     <article>
       <h3>Devartis</h3>
-      <h4>Web developer. August 2013 to May 2015</h4>
+      <h4>Jr fullstack developer. August 2013 to May 2015</h4>
       <p>
         Development and maintenance of web apps, search engines and analytical report tools.
       </p>
@@ -82,16 +87,16 @@
 
     <article>
       <h3>CBC UBA</h3>
-      <h4>Auxiliar teacher. 1st and 2nd semester of 2014</h4>
+      <h4>Assistant teacher. 1st and 2nd semester of 2014</h4>
       <p>
-        Auxiliar teacher in the Math subject for the entry course of the University of Buenos Aires (commonly known as the CBC)
+        Assistant teacher in the Math subject for the entry course of the University of Buenos Aires (commonly known as the CBC)
       </p>
     </article>
   </section>
 
   <section>
     <h2>Academic formation</h2>
-    <h3>Mathematical sciences, applied math orientation</h3>
+    <h3>Licentiate in mathematical sciences, applied math orientation</h3>
     <p>Faculty of Exact and Natural Sciences, University of Buenos Aires</p>
     <p>Not completed</p>
   </section>
